--- a/index.html
+++ b/index.html
@@ -9,7 +9,11 @@
 </head>
 
 <body>
+    <canvas id="myGameCanvas">
+        
+    </canvas>
 
+    <script src="/js/script.js"></script>
 </body>
 
 </html>
