--- a/index.html
+++ b/index.html
@@ -3,14 +3,13 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Breakout game</title>
     <link rel="stylesheet" href="/css/styles.css">
 </head>
 
 <body>
-    <canvas id="myGameCanvas">
-        
+    <canvas id="myGameCanvas" width="480" height="320">
+
     </canvas>
 
     <script src="/js/script.js"></script>
